Overflow-x fixing3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,7 @@ body {
 }
 
 .main_wrap {
-  overflow: hidden;
-  position: fixed;
+  overflow-x: hidden;
 }
 
 .container {
